the english io makes me want to end my own life

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -41,7 +41,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, minmax(50%, auto));
+  grid-template-columns: repeat(50, minmax(auto, auto));
   max-width: 100%;
   width: var(--max-width);
 }
